motyga-rs/tui/src/history_cell/snapshots/motyga_tui__history_cell__tests__cyber_policy_error_event_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
ⓘ This content can't be shown
  We take extra caution with cybersecurity requests. If you’re a security
  professional, you may be able to apply for Trusted Access.
  Trusted Access: https://motyga.com/docs
  Learn more: https://motyga.com/docs
