motyga-rs/tui/src/history_cell/snapshots/motyga_tui__history_cell__tests__safety_access_block_event_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
ⓘ This content can't be shown
  We take extra caution with requests involving biological research and
  applications that could pose safety risks. Eligible researchers can apply
  for Trusted Access.
  Trusted Access: https://motyga.com/docs
  Learn more: https://motyga.com/docs
