motyga-rs/tui/src/history_cell/snapshots/motyga_tui__history_cell__tests__standalone_windows_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ✨ Update available! 0.0.0 -> 9.9.9                                                                        │
│ Run powershell -ExecutionPolicy Bypass -c '$env:MOTYGA_NON_INTERACTIVE=1; irm                              │
│ https://motyga.com/install.ps1 | iex' to update.                                                           │
│                                                                                                            │
│ See full release notes:                                                                                    │
│ https://motyga.com/release-notes                                                                           │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
