motyga-rs/tui/src/history_cell/snapshots/motyga_tui__history_cell__tests__user_history_cell_wraps_and_prefixes_each_line_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---

› one two
  three
  four five
  six seven
